--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-scikit-learn>=1.3.0
-pandas>=2.1.0
-joblib>=1.3.0
-sqlalchemy>=2.0.0
-pydantic>=2.0.0
+fastapi
+uvicorn
+scikit-learn
+pandas
+sqlalchemy
+pydantic
+python-multipart
+httpx
